# photon

./: .gitignore  CHANGELOG  CLAUDE.md  CMakeLists.txt  README.md  run.sh  sourceme.sh
.sisyphus/: architecture-refactor.md  boulder.json  fix-convert-pbrt-early-return.md  fix-envmap-rotation.md
.sisyphus/notepads/bdpt-exploration/: decisions.md  learnings.md  problems.md
app/: CMakeLists.txt  anari_smoke.cpp  main.cpp  mc_table.inc  photon_anari_render.cpp  photon_bdpt_render.cpp  photon_debug_ray.cpp  photon_mpi_render.cpp  photon_pbrt_render.cpp  photon_render.cpp  photon_scene_render.cpp  photon_scivis_mpi.cpp  photon_volume_render.cpp  pt_debug_ray.cpp  pt_render.cpp
cmake/: Dependencies.cmake  ProjectOptions.cmake
docs/: blog-post.md
docs/plans/: 2026-03-05-photon-implementation-plan.md  2026-03-05-photon-pathtracer-design.md  2026-03-14-gpu-texture-sampling-design.md  2026-03-14-texture-wrap-modes-implementation.md
include/photon/anari/: device.h  frame.h  library.h
include/photon/pathtracer/: version.h
include/photon/pbrt/: image_loader.h  pbrt_parser.h  pbrt_scene.h  pbrt_to_photon.h  ply_reader.h
include/photon/pt/: bdpt.h  camera.h  color.h  denoiser.h  disney_bsdf.h  environment_map.h  light.h  material.h  math.h  math_aabb.h  math_mat4.h  math_vec2.h  pathtracer.h  ray.h  rng.h  sampling.h  scene.h  sphere.h  texture.h  tone_mapping.h  volume.h
include/photon/pt/backend/: embree_backend.h  hiprt_backend.h  kokkos_backend.h  optix_backend.h  ray_backend.h
include/photon/pt/bvh/: bvh.h  bvh_validate.h
include/photon/pt/geom/: mesh_intersector.h  triangle_intersect.h  triangle_mesh.h
include/photon/pt/scene/: builder.h
scripts/: build.sh  download_scenes.sh  render_all.sh  render_all_cameras.sh
src/: CMakeLists.txt
src/opencode/anari/: device.cpp  device.h  entrypoint.cpp  library.cpp  library.h
src/opencode/pathtracer/: version.cpp  version.h
src/opencode/pt/: camera.h  material.h  math.h  math_aabb.h  pathtracer.cpp  pathtracer.h  ray.h  rng.h  scene.cpp  scene.h  sphere.h
src/opencode/pt/bvh/: bvh.cpp  bvh.h  bvh_validate.h
src/opencode/pt/geom/: mesh_intersector.h  triangle_intersect.h  triangle_mesh.h
src/opencode/pt/scene/: builder.cpp  builder.h
src/photon/anari/: PhotonDevice.cpp  PhotonDevice.h  SceneFromAnari.cpp  SceneFromAnari.h  device.cpp  device_impl.cpp  device_impl.h  entrypoint.cpp  library.cpp
src/photon/anari/objects/: frame.cpp
src/photon/anari/runtime/: state.h
src/photon/pathtracer/: version.cpp
src/photon/pbrt/: image_loader.cpp  pbrt_parser.cpp  pbrt_to_photon.cpp  ply_reader.cpp
src/photon/pt/: denoiser.cpp  environment_map.cpp  pathtracer.cpp  scene.cpp  version.cpp
src/photon/pt/backend/: backend_factory.cpp  embree_backend.cpp  hiprt_backend.cpp  kokkos_backend.cpp  optix_backend.cpp
src/photon/pt/backend/optix/: photon_optix.cu
src/photon/pt/bvh/: bvh.cpp
src/photon/pt/scene/: builder.cpp
tests/: CMakeLists.txt  anari_import_test.cpp  backend_test.cpp  camera_test.cpp  disney_bsdf_test.cpp  integration_test.cpp  light_test.cpp  math_test.cpp  mesh_test.cpp  pathtracer_test.cpp  pt_smoke_test.cpp  sampling_test.cpp  scene_test.cpp  texture_test.cpp  tonemap_test.cpp  version_test.cpp  volume_test.cpp
tools/: CMakeLists.txt  render_test.cpp
