if(OPENCODE_ENABLE_CUDA AND Kokkos_ENABLE_CUDA)
  message(STATUS "Skipping tests/ targets (not compatible with Kokkos CUDA CXX propagation)")
  return()
endif()

add_executable(photon_version_test version_test.cpp)
add_executable(photon_pt_smoke_test pt_smoke_test.cpp)
add_executable(photon_math_test math_test.cpp)
add_executable(photon_tonemap_test tonemap_test.cpp)
add_executable(photon_sampling_test sampling_test.cpp)
add_executable(photon_mesh_test mesh_test.cpp)
add_executable(photon_disney_bsdf_test disney_bsdf_test.cpp)
add_executable(photon_light_test light_test.cpp)
add_executable(photon_texture_test texture_test.cpp)
add_executable(photon_backend_test backend_test.cpp)
add_executable(photon_scene_test scene_test.cpp)
add_executable(photon_camera_test camera_test.cpp)
add_executable(photon_pathtracer_test pathtracer_test.cpp)
add_executable(photon_integration_test integration_test.cpp)
add_executable(photon_volume_test volume_test.cpp)
add_executable(photon_anari_import_test anari_import_test.cpp)

target_link_libraries(photon_version_test PRIVATE anari_library_photon)

target_link_libraries(photon_pt_smoke_test PRIVATE anari_library_photon)

target_link_libraries(photon_math_test PRIVATE anari_library_photon)
target_link_libraries(photon_tonemap_test PRIVATE anari_library_photon)
target_link_libraries(photon_sampling_test PRIVATE anari_library_photon)
target_link_libraries(photon_mesh_test PRIVATE anari_library_photon)
target_link_libraries(photon_disney_bsdf_test PRIVATE anari_library_photon)
target_link_libraries(photon_light_test PRIVATE anari_library_photon)
target_link_libraries(photon_texture_test PRIVATE anari_library_photon)
target_link_libraries(photon_backend_test PRIVATE anari_library_photon)
target_link_libraries(photon_scene_test PRIVATE anari_library_photon)
target_link_libraries(photon_camera_test PRIVATE anari_library_photon)
target_link_libraries(photon_pathtracer_test PRIVATE anari_library_photon)
target_link_libraries(photon_integration_test PRIVATE anari_library_photon)
target_link_libraries(photon_volume_test PRIVATE anari_library_photon)
target_link_libraries(photon_anari_import_test PRIVATE anari_library_photon anari)

target_include_directories(photon_anari_import_test PRIVATE "${CMAKE_BINARY_DIR}/_deps/anari-src/src/anari/include")

add_test(NAME photon_version_test COMMAND $<TARGET_FILE:photon_version_test>)
add_test(NAME photon_pt_smoke_test COMMAND $<TARGET_FILE:photon_pt_smoke_test>)
add_test(NAME photon_math_test COMMAND $<TARGET_FILE:photon_math_test>)
add_test(NAME photon_tonemap_test COMMAND $<TARGET_FILE:photon_tonemap_test>)
add_test(NAME photon_sampling_test COMMAND $<TARGET_FILE:photon_sampling_test>)
add_test(NAME photon_mesh_test COMMAND $<TARGET_FILE:photon_mesh_test>)
add_test(NAME photon_disney_bsdf_test COMMAND $<TARGET_FILE:photon_disney_bsdf_test>)
add_test(NAME photon_light_test COMMAND $<TARGET_FILE:photon_light_test>)
add_test(NAME photon_texture_test COMMAND $<TARGET_FILE:photon_texture_test>)
add_test(NAME photon_scene_test COMMAND $<TARGET_FILE:photon_scene_test>)
add_test(NAME photon_camera_test COMMAND $<TARGET_FILE:photon_camera_test>)
add_test(NAME photon_pathtracer_test COMMAND $<TARGET_FILE:photon_pathtracer_test>)
add_test(NAME photon_integration_test COMMAND $<TARGET_FILE:photon_integration_test>)
add_test(NAME photon_volume_test COMMAND $<TARGET_FILE:photon_volume_test>)

add_test(NAME photon_anari_import_test COMMAND $<TARGET_FILE:photon_anari_import_test>)

add_test(NAME photon_backend_test COMMAND $<TARGET_FILE:photon_backend_test>)
